# regolith

./: CONTRIBUTING.md  README.md
docs/: architecture.md
docs/assets/: README.md
src/regolith_bringup/: package.xml
src/regolith_interfaces/: CMakeLists.txt  package.xml
src/regolith_localisation/: package.xml
src/regolith_navigation/: package.xml
src/regolith_perception/: package.xml
src/regolith_simulation/: package.xml
