<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>regolith_bringup</n>
  <version>0.1.0</version>
  <description>Launch files and configuration for bringing up the complete Regolith autonomy stack</description>
  <maintainer email="info@astro42.com">Astro42</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>regolith_localisation</depend>
  <depend>regolith_navigation</depend>
  <depend>regolith_perception</depend>
  <depend>regolith_simulation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
