<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>regolith_navigation</n>
  <version>0.1.0</version>
  <description>Terrain-aware waypoint navigation, obstacle avoidance, and trajectory following for planetary rovers</description>
  <maintainer email="info@astro42.com">Astro42</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_core</depend>
  <depend>regolith_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
