<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>regolith_perception</n>
  <version>0.1.0</version>
  <description>Terrain mapping, obstacle detection, and traversability assessment for planetary surfaces</description>
  <maintainer email="info@astro42.com">Astro42</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>regolith_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
